--- a/index-5.html
+++ b/index-5.html
@@ -5,7 +5,7 @@
 <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Eduhome - Educational HTML Template</title>
+        <title>Destiny</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -57,7 +57,7 @@
 					<div class="row">
 						<div class="col-md-3 col-sm-5 col-6">
 							<div class="logo">
-								<a href="index.html"><img src="img/logo/logo2.png" alt="eduhome" /></a>
+								<a href="index.html"><img src="img/logo/logo2.png" alt="destiny" /></a>
 							</div>
 						</div>
 						<div class="col-md-9 col-sm-7 col-6">
@@ -588,7 +588,7 @@
                     <div class="row">
                         <div class="col-lg-3 col-md-6">
                             <div class="single-widget">
-                                <h3>why eduhome</h3>
+                                <h3>why destiny</h3>
                                 <ul>
                                     <li><a href="#">great campus</a></li>
                                     <li><a href="#">various faculty</a></li>
@@ -627,7 +627,7 @@
                                 <h3>get in touch</h3>
                                 <p>Your address goes here, Street<br>City, Roadno 785 New York</p>
                                 <p>+880  548  986  898  87<br>+880  659  785  658  98</p>
-                                <p>info@eduhome.com<br>www.eduhome.com</p>
+                                <p>info@destiny.com<br>www.destiny.com</p>
                             </div>
                         </div>
                     </div>
@@ -638,9 +638,9 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="footer-logo text-center">
-                                <a href="index.html"><img src="img/logo/footer-logo.png" alt="eduhome"></a>
+                                <a href="index.html"><img src="img/logo/footer-logo.png" alt="destiny"></a>
                             </div>
-                            <p>Copyright © <a href="index.html">Eduhome</a> 2021. All Right Reserved By <a href="https://themeforest.net/user/hastech/portfolio" target="_blank">Hastech.</a></p>
+                            <p>Copyright © <a href="index.html">Destiny</a> 2021. All Right Reserved By <a href="https://themeforest.net/user/hastech/portfolio" target="_blank">Hastech.</a></p>
                             <div class="footer-social">
                                 <ul>
                                     <li><a href="https://www.facebook.com/devitems/?ref=bookmarks"><i class="zmdi zmdi-facebook"></i></a></li>
