--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<div class="row">
 					<div class="col-md-3">
 						<div class="logo">
-							<a href="index.html"><img src="img/logo/logo.png" alt="eduhome" /></a>
+							<a href="index.html"><img src="img/logo/logo.png" alt="destiny" /></a>
 						</div>
 					</div>
 					<div class="col-md-9">
@@ -83,10 +83,9 @@
 							<div class="col-lg-7 col-md-offset-left-5">
 								<div class="slide-content-wrapper">
 									<div class="slide-content">
-										<h3>EDUCATION MAKES </h3>
-										<h2>PROPER HUMANITY </h2>
-										<p>I must explain to you how all this mistaken idea of denouncing pleasure and prsing pain was born
-											and I will give you a complete account of the system </p>
+										<h3>Destiny Achievers Group of Schools </h3>
+										<!-- <h2>PROPER HUMANITY </h2> -->
+										<p>Welcome to Destiny Achievers Group of schools website. We don’t take it for granted that you have committed your precious time to visit our web page. We take the pleasure to show case through this platform the various aspects that define and justify the relevance of our existence as an institution. </p>
 										<a class="default-btn" href="about.html">Learn more</a>
 									</div>
 								</div>
@@ -106,10 +105,9 @@
 							<div class="col-lg-7 col-md-offset-left-5">
 								<div class="slide-content-wrapper text-start">
 									<div class="slide-content">
-										<h3>EDUCATION MAKES </h3>
-										<h2>PROPER HUMANITY </h2>
-										<p>I must explain to you how all this mistaken idea of denouncing pleasure and prsing pain was born
-											and I will give you a complete account of the system </p>
+										<h3>Destiny Achievers Group of Schools </h3>
+										<!-- <h2>PROPER HUMANITY </h2> -->
+										<p>Welcome to Destiny Achievers Group of schools website. We don’t take it for granted that you have committed your precious time to visit our web page. We take the pleasure to show case through this platform the various aspects that define and justify the relevance of our existence as an institution. </p>
 										<a class="default-btn" href="about.html">Learn more</a>
 									</div>
 								</div>
@@ -129,10 +127,9 @@
 							<div class="col-lg-7 col-md-offset-left-5">
 								<div class="slide-content-wrapper">
 									<div class="slide-content">
-										<h3>EDUCATION MAKES </h3>
-										<h2>PROPER HUMANITY </h2>
-										<p>I must explain to you how all this mistaken idea of denouncing pleasure and prsing pain was born
-											and I will give you a complete account of the system </p>
+										<h3>Destiny Achievers Group of Schools </h3>
+										<!-- <h2>PROPER HUMANITY </h2> -->
+										<p>Welcome to Destiny Achievers Group of schools website. We don’t take it for granted that you have committed your precious time to visit our web page. We take the pleasure to show case through this platform the various aspects that define and justify the relevance of our existence as an institution. </p>
 										<a class="default-btn" href="about.html">Learn more</a>
 									</div>
 								</div>
