--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>Eduhome - Educational HTML Template</title>
+	<title>Destiny</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -36,7 +36,7 @@
 					<div class="row">
 						<div class="col-md-3">
 							<div class="logo">
-								<a href="index.html"><img src="img/logo/logo.png" alt="eduhome" /></a>
+								<a href="index.html"><img src="img/logo/logo.png" alt="destiny" /></a>
 							</div>
 						</div>
 						<div class="col-md-9">
@@ -154,29 +154,6 @@
 			</div>
 		</div>
 		<!-- Contact End -->
-		<!-- Subscribe Start -->
-		<div class="subscribe-area pt-60 pb-70">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-8 offset-lg-2">
-						<div class="subscribe-content section-title text-center">
-							<h2>subscribe our newsletter</h2>
-							<p>I must explain to you how all this mistaken idea </p>
-						</div>
-						<div class="newsletter-form mc_embed_signup">
-							<form action="" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-								<div id="mc_embed_signup_scroll" class="mc-form">
-									<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Enter your e-mail address" required>
-									<div class="mc-news" aria-hidden="true"><input type="text" name="b_6bbb9b6f5827bd842d9640c82_05d85f18ef" tabindex="-1" value=""></div>
-									<button id="mc-embedded-subscribe" class="default-btn" type="submit" name="subscribe"><span>subscribe</span></button>
-								</div>
-							</form>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- Subscribe End -->
 		<!-- Footer Start -->
 		<bottom-nav />
 		<!-- Footer End -->
