--- a/course-details.html
+++ b/course-details.html
@@ -5,7 +5,7 @@
 <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Eduhome - Educational HTML Template</title>
+        <title>Destiny</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -57,7 +57,7 @@
 					<div class="row">
 						<div class="col-md-3 col-sm-5 col-6">
 							<div class="logo">
-								<a href="index.html"><img src="img/logo/logo2.png" alt="eduhome" /></a>
+								<a href="index.html"><img src="img/logo/logo2.png" alt="destiny" /></a>
 							</div>
 						</div>
 						<div class="col-md-9 col-sm-7 col-6">
@@ -200,7 +200,7 @@
                             <div class="reply-area">
                                 <h3>LEAVE A REPLY</h3>
                                 <p>I must explain to you how all this a mistaken idea of ncing great explorer of the rut<br> the is lder of human happinescias unde omnis iste natus error sit volptatem </p>
-                                <form id="contact-form" action="https://template.hasthemes.com/eduhome/eduhome/mail.php" method="post">
+                                <form id="contact-form" action="https://template.hasthemes.com/destiny/destiny/mail.php" method="post">
                                     <div class="row">
                                         <div class="col-md-12">
                                             <p>Name</p>
@@ -351,7 +351,7 @@
                         <div class="col-lg-4 col-md-6">
                             <div class="single-widget pr-60">
                                 <div class="footer-logo pb-25">
-                                    <a href="index.html"><img src="img/logo/footer-logo.png" alt="eduhome"></a>
+                                    <a href="index.html"><img src="img/logo/footer-logo.png" alt="destiny"></a>
                                 </div>
                                 <p>I must explain to you how all this mistaken idea of denoung pleure and praising pain was born and give you a coete account of the system. </p>
                                 <div class="footer-social">
@@ -393,7 +393,7 @@
                                 <h3>get in touch</h3>
                                 <p>Your address goes here, Street<br>City, Roadno 785 New York</p>
                                 <p>+880  548  986  898  87<br>+880  659  785  658  98</p>
-                                <p>info@eduhome.com<br>www.eduhome.com</p>
+                                <p>info@destiny.com<br>www.destiny.com</p>
                             </div>
                         </div>
                     </div>
@@ -403,7 +403,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-12">
-                            <p>Copyright © <a href="index.html">Eduhome</a> 2021. All Right Reserved By <a href="https://themeforest.net/user/hastech/portfolio" target="_blank">Hastech.</a></p>
+                            <p>Copyright © <a href="index.html">Destiny</a> 2021. All Right Reserved By <a href="https://themeforest.net/user/hastech/portfolio" target="_blank">Hastech.</a></p>
                         </div>
                     </div>
                 </div>
