--- a/index-4.html
+++ b/index-4.html
@@ -5,7 +5,7 @@
 <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Eduhome - Educational HTML Template</title>
+        <title>Destiny</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -57,7 +57,7 @@
 					<div class="row">
 						<div class="col-md-3 col-sm-5 col-6">
 							<div class="logo">
-								<a href="index.html"><img src="img/logo/logo2.png" alt="eduhome" /></a>
+								<a href="index.html"><img src="img/logo/logo2.png" alt="destiny" /></a>
 							</div>
 						</div>
 						<div class="col-md-9 col-sm-7 col-6">
@@ -588,12 +588,12 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="footer-logo text-center mb-70">
-                                <a href="index.html"><img src="img/logo/footer-logo.png" alt="eduhome"></a>
+                                <a href="index.html"><img src="img/logo/footer-logo.png" alt="destiny"></a>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6">
                             <div class="single-widget">
-                                <h3>why eduhome</h3>
+                                <h3>why destiny</h3>
                                 <ul>
                                     <li><a href="#">great campus</a></li>
                                     <li><a href="#">various faculty</a></li>
