--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
 					<div class="row">
 						<div class="col-md-3 col-sm-5 col-6">
 							<div class="logo">
-								<a href="index.html"><img src="img/logo/logo2.png" alt="destiny" /></a>
+								<a style="height: 50px; aspect-ratio: 1;" href="index.html"><img src="img/logo/logo.png" alt="destiny" /></a>
 							</div>
 						</div>
 						<div class="col-md-9 col-sm-7 col-6">
@@ -51,9 +51,9 @@
 										<ul>
 											<li><a href="/index.html">Home</a></li>
 											<li><a href="/about.html">About Us</a></li>
-											<li><a href="/event.html">Newsletter</a></li>
-											<li><a href="/teacher.html">School Magazine</a></li>
-											<li><a href="/blog.html">Fees</a></li>
+											<li><a href="/newsletter.html">Newsletter</a></li>
+											<li><a href="/magazine.html">School Magazine</a></li>
+											<li><a href="/fees.html">Fees</a></li>
 											<li><a href="/contact.html">Contact</a></li>
 											<!-- <li><a href="course.html">courses</a>
 																				<ul>
