--- a/blog-right-side-bar.html
+++ b/blog-right-side-bar.html
@@ -57,7 +57,7 @@
 					<div class="row">
 						<div class="col-md-3 col-sm-5 col-6">
 							<div class="logo">
-								<a href="index.html"><img src="img/logo/logo2.png" alt="destiny" /></a>
+								<a href="index.html"><img src="img/logo/logo.png" style="height: 50px; aspect-ratio: 1;" alt="destiny" /></a>
 							</div>
 						</div>
 						<div class="col-md-9 col-sm-7 col-6">
@@ -82,17 +82,17 @@
                                                     <li><a href="course-details.html">courses details</a></li>
                                                 </ul>
                                             </li>
-                                            <li><a href="event.html">event</a>
+                                            <li><a href="newsletter.html">event</a>
                                                 <ul>
-                                                    <li><a href="event.html">event</a></li>
+                                                    <li><a href="newsletter.html">event</a></li>
                                                     <li><a href="event-left-side-bar.html">event left sidebar</a></li>
                                                     <li><a href="event-right-side-bar.html">event right sidebar</a></li>
                                                     <li><a href="event-details.html">event details</a></li>
                                                 </ul>
                                             </li>
-                                            <li class="hidden-sm"><a href="teacher.html">teacher</a>
+                                            <li class="hidden-sm"><a href="magazine.html">teacher</a>
                                                 <ul>
-                                                    <li><a href="teacher.html">teacher</a></li>
+                                                    <li><a href="magazine.html">teacher</a></li>
                                                     <li><a href="teacher-details.html">teacher details</a></li>
                                                 </ul>
                                             </li>
@@ -434,7 +434,7 @@
                                 <ul>
                                     <li><a href="#">addmission</a></li>
                                     <li><a href="#">Academic Calender</a></li>
-                                    <li><a href="event.html">Event List</a></li>
+                                    <li><a href="newsletter.html">Event List</a></li>
                                     <li><a href="#">Hostel &amp; Dinning</a></li>
                                     <li><a href="#">TimeTable</a></li>
                                 </ul>
@@ -446,9 +446,9 @@
                                 <ul>
                                     <li><a href="course.html">our courses</a></li>
                                     <li><a href="about.html">about us</a></li>
-                                    <li><a href="teacher.html">teachers &amp; faculty</a></li>
+                                    <li><a href="magazine.html">teachers &amp; faculty</a></li>
                                     <li><a href="#">teams &amp; conditions</a></li>
-                                    <li><a href="event.html">our events</a></li>
+                                    <li><a href="newsletter.html">our events</a></li>
                                 </ul>
                             </div>
                         </div>
