--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
 					<div class="row">
 						<div class="col-md-3">
 							<div class="logo">
-								<a href="index.html"><img src="img/logo/logo.png" alt="destiny" /></a>
+								<a href="index.html"><img src="img/logo/logo.png" style="height: 75px; aspect-ratio: 1;" alt="destiny" /></a>
 							</div>
 						</div>
 						<div class="col-md-9">
@@ -47,9 +47,9 @@
 										<ul>
 											<li><a href="/index.html">Home</a></li>
 											<li><a href="/about.html">About Us</a></li>
-											<li><a href="/event.html">Newsletter</a></li>
-											<li><a href="/teacher.html">School Magazine</a></li>
-											<li><a href="/blog.html">Fees</a></li>
+											<li><a href="/newsletter.html">Newsletter</a></li>
+											<li><a href="/magazine.html">School Magazine</a></li>
+											<li><a href="/fees.html">Fees</a></li>
 											<li><a href="/contact.html">Contact</a></li>
 											<!-- <li><a href="course.html">courses</a>
 												<ul>
