--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 									<ul>
 										<li><a href="index.html">Home</a></li>
 										<li><a href="about.html">About Us</a></li>
-										<li><a href="event.html">Newsletter</a></li>
-										<li class="hidden-sm"><a href="teacher.html">School Magazine</a></li>
+										<li><a href="newsletter.html">Newsletter</a></li>
+										<li class="hidden-sm"><a href="magazine.html">School Magazine</a></li>
 										<li><a href="blog.html">Fees</a></li>
 										<li><a href="contact.html">Contact</a></li>
 										<!-- <li><a href="course.html">courses</a>
