updated index page

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 					</div>
 				</div>
 				<div class="col-md-6">
-					<div class="notice-right">
+					<!-- <div class="notice-right">
 						<div class="single-notice-right mb-25 pb-25">
 							<h3>PROFESSIONAL TEACHER</h3>
 							<p>I must explain to you how all this mistaken idea of denouncing pleure and praising pain was born and I
@@ -214,7 +214,7 @@
 							<p>I must explain to you how all this mistaken idea of denouncing pleure and praising pain was born and I
 								will give you a complete account of the system, and expound the actual teachings </p>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</div>
@@ -226,15 +226,12 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-left-4">
 					<div class="choose-content text-start">
-						<h2>WHY YOU CHOOSE EDUHOME ?</h2>
-						<p>I must explain to you how all this mistaken idea of denouncing pleure and praising pain was born and I
-							will give you a complete account of the system, and expound the actual teachings the master-builder of
-							humanit happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but
-							because. </p>
+						<h2>WHY YOU SHOULD CHOOSE DESTINY </h2>
+						<p>We don’t take it for granted that you have committed your precious time to visit our web page. We take the pleasure to show case through this platform the various aspects that define and justify the relevance of our existence as an institution. </p>
 						<p class="choose-option">I must explain to you how all this mistaken idea of denouncing pleure and praising
 							pain was born and I will give you a complete account of the system, and expound the actual teachings the
 							master-builder. </p>
-						<a class="default-btn" href="course-details.html">view courses</a>
+						<a class="default-btn" href="/about.html">view more</a>
 					</div>
 				</div>
 			</div>
@@ -243,7 +240,7 @@
 	<!-- Choose Area End -->
 	<!-- Courses Area Start -->
 	<div class="courses-area pt-150 text-center">
-		<div class="container">
+		<!-- <div class="container">
 			<div class="row">
 				<div class="col-12">
 					<div class="section-title">
@@ -305,7 +302,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 	</div>
 	<!-- Courses Area End -->
 	<!-- Event Area Start -->
@@ -330,11 +327,11 @@
 								<h4><a href="event-details.html">MICRO BIOLOGICAL WORKSHOP</a></h4>
 								<ul>
 									<li><i class="fa fa-clock-o"></i>9.00 AM - 4.45 PM</li>
-									<li><i class="fa fa-map-marker"></i>New Yourk City</li>
+									<li><i class="fa fa-map-marker"></i>Harare</li>
 								</ul>
 							</div>
 							<div class="event-content-right">
-								<a class="default-btn" href="event-details.html">join now</a>
+
 							</div>
 						</div>
 					</div>
@@ -347,11 +344,11 @@
 								<h4><a href="event-details.html">ADVANCE PHP WORKSHOP</a></h4>
 								<ul>
 									<li><i class="fa fa-clock-o"></i>9.00 AM - 4.45 PM</li>
-									<li><i class="fa fa-map-marker"></i>New Yourk City</li>
+									<li><i class="fa fa-map-marker"></i>Harare</li>
 								</ul>
 							</div>
 							<div class="event-content-right">
-								<a class="default-btn" href="event-details.html">join now</a>
+
 							</div>
 						</div>
 					</div>
@@ -364,11 +361,11 @@
 								<h4><a href="event-details.html">LEARN ENGLISH HISTORY</a></h4>
 								<ul>
 									<li><i class="fa fa-clock-o"></i>9.00 AM - 4.45 PM</li>
-									<li><i class="fa fa-map-marker"></i>New Yourk City</li>
+									<li><i class="fa fa-map-marker"></i>Harare</li>
 								</ul>
 							</div>
 							<div class="event-content-right">
-								<a class="default-btn" href="event-details.html">join now</a>
+
 							</div>
 						</div>
 					</div>
@@ -381,11 +378,11 @@
 								<h4><a href="event-details.html">GLOBAL ECONOMIC CONFERENCE</a></h4>
 								<ul>
 									<li><i class="fa fa-clock-o"></i>9.00 AM - 4.45 PM</li>
-									<li><i class="fa fa-map-marker"></i>New Yourk City</li>
+									<li><i class="fa fa-map-marker"></i>Harare</li>
 								</ul>
 							</div>
 							<div class="event-content-right">
-								<a class="default-btn" href="event-details.html">join now</a>
+
 							</div>
 						</div>
 					</div>
@@ -400,11 +397,11 @@
 								<h4><a href="event-details.html">MATHEMATICAL WORKSHOP</a></h4>
 								<ul>
 									<li><i class="fa fa-clock-o"></i>9.00 AM - 4.45 PM</li>
-									<li><i class="fa fa-map-marker"></i>New Yourk City</li>
+									<li><i class="fa fa-map-marker"></i>Harare</li>
 								</ul>
 							</div>
 							<div class="event-content-right">
-								<a class="default-btn" href="event-details.html">join now</a>
+
 							</div>
 						</div>
 					</div>
@@ -417,11 +414,11 @@
 								<h4><a href="event-details.html">WORDPRESS AUTHOR MEET UP</a></h4>
 								<ul>
 									<li><i class="fa fa-clock-o"></i>9.00 AM - 4.45 PM</li>
-									<li><i class="fa fa-map-marker"></i>New Yourk City</li>
+									<li><i class="fa fa-map-marker"></i>Harare</li>
 								</ul>
 							</div>
 							<div class="event-content-right">
-								<a class="default-btn" href="event-details.html">join now</a>
+
 							</div>
 						</div>
 					</div>
@@ -434,11 +431,11 @@
 								<h4><a href="event-details.html">DIGITAL MARKETING ANALYSIS</a></h4>
 								<ul>
 									<li><i class="fa fa-clock-o"></i>9.00 AM - 4.45 PM</li>
-									<li><i class="fa fa-map-marker"></i>New Yourk City</li>
+									<li><i class="fa fa-map-marker"></i>Harare</li>
 								</ul>
 							</div>
 							<div class="event-content-right">
-								<a class="default-btn" href="event-details.html">join now</a>
+
 							</div>
 						</div>
 					</div>
@@ -451,11 +448,11 @@
 								<h4><a href="event-details.html">WROKSHOP ON UI &amp; UX</a></h4>
 								<ul>
 									<li><i class="fa fa-clock-o"></i>9.00 AM - 4.45 PM</li>
-									<li><i class="fa fa-map-marker"></i>New Yourk City</li>
+									<li><i class="fa fa-map-marker"></i>Harare</li>
 								</ul>
 							</div>
 							<div class="event-content-right">
-								<a class="default-btn" href="event-details.html">join now</a>
+
 							</div>
 						</div>
 					</div>
@@ -464,143 +461,8 @@
 		</div>
 	</div>
 	<!-- Event Area End -->
-	<!-- Testimonial Area Start -->
-	<div class="testimonial-area pt-110 pb-105 text-center">
-		<div class="container">
-			<div class="row">
-				<div class="testimonial-owl owl-theme owl-carousel">
-					<div class="col-lg-8 offset-lg-2">
-						<div class="single-testimonial">
-							<div class="testimonial-info">
-								<div class="testimonial-img">
-									<img src="img/testimonial/testimonial.jpg" alt="testimonial">
-								</div>
-								<div class="testimonial-content">
-									<p>I must explain to you how all this mistaken idea of denoung pleure and praising pain was born and I
-										will give you a coete account of the system, and expound the actual</p>
-									<h4>David Morgan</h4>
-									<h5>Student, CSE</h5>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- Testimonial Area End -->
-	<!-- Blog Area Start -->
-	<div class="blog-area pt-150 pb-150">
-		<div class="container">
-			<div class="row">
-				<div class="col-12">
-					<div class="section-title text-center">
-						<img src="img/icon/section.png" alt="section-title">
-						<h2>LATEST FROM BLOG</h2>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-4 col-md-6">
-					<div class="single-blog">
-						<div class="blog-img">
-							<a href="blog-details.html"><img src="img/blog/blog1.jpg" alt="blog"></a>
-							<div class="blog-hover">
-								<a href="blog-details.html"><i class="fa fa-link"></i></a>
-							</div>
-						</div>
-						<div class="blog-content">
-							<div class="blog-top">
-								<p>By Alex / June 20, 2017 / <i class="fa fa-comments-o"></i> 4</p>
-							</div>
-							<div class="blog-bottom">
-								<h2><a href="blog-details.html">I must explain to you how all this a mistaken idea </a></h2>
-								<a href="blog-details.html">read more</a>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6">
-					<div class="single-blog">
-						<div class="blog-img">
-							<a href="blog-details.html"><img src="img/blog/blog2.jpg" alt="blog"></a>
-							<div class="blog-hover">
-								<a href="blog-details.html"><i class="fa fa-link"></i></a>
-							</div>
-						</div>
-						<div class="blog-content">
-							<div class="blog-top">
-								<p>By Alex / June 20, 2017 / <i class="fa fa-comments-o"></i> 4</p>
-							</div>
-							<div class="blog-bottom">
-								<h2><a href="blog-details.html">I must explain to you how all this a mistaken idea </a></h2>
-								<a href="blog-details.html">read more</a>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6">
-					<div class="single-blog mb-0">
-						<div class="blog-img">
-							<a href="blog-details.html"><img src="img/blog/blog3.jpg" alt="blog"></a>
-							<div class="blog-hover">
-								<a href="blog-details.html"><i class="fa fa-link"></i></a>
-							</div>
-						</div>
-						<div class="blog-content">
-							<div class="blog-top">
-								<p>By Alex / June 20, 2017 / <i class="fa fa-comments-o"></i> 4</p>
-							</div>
-							<div class="blog-bottom">
-								<h2><a href="blog-details.html">I must explain to you how all this a mistaken idea </a></h2>
-								<a href="blog-details.html">read more</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- Blog Area End -->
-	<!-- Subscribe Start -->
-	<div class="subscribe-area pt-60 pb-70">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-8 offset-lg-2">
-					<div class="subscribe-content section-title text-center">
-						<h2>subscribe our newsletter</h2>
-						<p>I must explain to you how all this mistaken idea </p>
-					</div>
-					<div class="newsletter-form mc_embed_signup">
-						<form
-							action="https://devitems.us11.list-manage.com/subscribe/post?u=6bbb9b6f5827bd842d9640c82&amp;id=05d85f18ef"
-							method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
-							target="_blank" novalidate>
-							<div id="mc_embed_signup_scroll" class="mc-form">
-								<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL"
-									placeholder="Enter your e-mail address" required>
-								<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-								<div class="mc-news" aria-hidden="true"><input type="text" name="b_6bbb9b6f5827bd842d9640c82_05d85f18ef"
-										tabindex="-1" value=""></div>
-								<button id="mc-embedded-subscribe" class="default-btn" type="submit"
-									name="subscribe"><span>subscribe</span></button>
-							</div>
-						</form>
-						<!-- mailchimp-alerts Start -->
-						<div class="mailchimp-alerts">
-							<div class="mailchimp-submitting"></div><!-- mailchimp-submitting end -->
-							<div class="mailchimp-success"></div><!-- mailchimp-success end -->
-							<div class="mailchimp-error"></div><!-- mailchimp-error end -->
-						</div>
-						<!-- mailchimp-alerts end -->
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- Subscribe End -->
 	<!-- Footer Start -->
-	<Bottom />
+	<bottom-nav />
 	<!-- Footer End -->
 </div>
 
@@ -617,11 +479,11 @@
 	<script src="js/main.js"></script>
 	<script type="module">
 		import { createApp } from 'https://unpkg.com/vue@3/dist/vue.esm-browser.js'
-		import Bottom from './components/layout/footer.js'
+		import BottomNav from './components/layout/footer.js'
 
 		createApp({
 			components: {
-				Bottom
+				BottomNav
 			},
 			data() {
 				return {
