updated index page removed vue

--- a/fees.html
+++ b/fees.html
@@ -106,27 +106,97 @@
 	</div>
 	<!-- Blog Start -->
 
-	<bottom-nav />
+	<div class="subscribe-area pt-60 pb-70">
+		<div class="container">
+				<div class="row">
+						<div class="col-lg-8 offset-lg-2">
+								<div class="subscribe-content section-title text-center">
+										<h2>subscribe our newsletter</h2>
+										<p>Sign up for newsletter. You will get update on talent shows, sports, scripture union club, principal's desk, etc</p>
+								</div>
+								<div class="newsletter-form mc_embed_signup">
+										<form action="" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+												<div id="mc_embed_signup_scroll" class="mc-form">
+														<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Enter your e-mail address" required>
+														<div class="mc-news" aria-hidden="true"><input type="text" name="b_6bbb9b6f5827bd842d9640c82_05d85f18ef" tabindex="-1" value=""></div>
+														<button id="mc-embedded-subscribe" class="default-btn" type="submit" name="subscribe"><span>subscribe</span></button>
+												</div>
+										</form>
+								</div>
+						</div>
+				</div>
+		</div>
+</div>
+<footer class="footer-area">
+<div class="main-footer">
+<div class="container">
+<div class="row">
+	<div class="col-lg-4 col-md-6">
+		<div class="single-widget pr-60">
+			<div class="footer-logo pb-25">
+				<a href="index.html"><img src="img/logo/logo.png" style="height: 75px; aspect-ratio: 1;" alt="destiny"></a>
+			</div>
+			<p>Destiny Achievers Group of schools is a privately-owned group of schools that constitute of day and boarding schools. The group of schools was founded in 2018 as a private educational institution. Located on the urban fringes of Harare metropolitan city, Destiny Achievers Group of Schools is administratively located in Goromonzi District under Mashonaland East  Province</p>
+			<div class="footer-social">
+				<ul>
+					<li><a href="https://www.facebook.com/"><i class="zmdi zmdi-facebook"></i></a>
+					</li>
+					<li><a href="https://www.twitter.com"><i class="zmdi zmdi-twitter"></i></a></li>
+					<li><a href="https://wa.me/"><i class="zmdi zmdi-whatsapp"></i></a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="col-lg-3 col-md-6">
+		<div class="single-widget">
+			<h3>information</h3>
+			<ul>
+				<li><a href="/index.html">home</a></li>
+				<li><a href="/about.html">about us</a></li>
+				<li><a href="/newsletter.html">newsletter</a></li>
+				<li><a href="/contact.html">contact</a></li>
+				<li><a href="/course.html">fees</a></li>
+			</ul>
+		</div>
+	</div>
+	<div class="col-lg-2 col-md-6 pt-4 pt-lg-0">
+		<div class="single-widget">
+			<h3>useful links</h3>
+			<ul>
+			<li><a href="/.html">home</a></li>
+			<li><a href="/about.html">about us</a></li>
+			<li><a href="/contact.html">contact</a></li>
+			<li><a href="/magazine.html">school magazine</a></li>
+			<li><a href="/course.html">fees</a></li>
+			</ul>
+		</div>
+	</div>
+	<div class="col-lg-3 col-md-6 pt-4 pt-lg-0">
+		<div class="single-widget">
+			<h3>get in touch</h3>
+			<p>Destiny Achievers Group of Schools, Plot 12, Glenforest, Borrowdale, Harare</p>
+			<p>+263 783 713 096 <br>+263 717 698 404</p>
+			<p>info@destiny.ac.zw</p>
+		</div>
+	</div>
+</div>
+</div>
+</div>
+<div class="footer-bottom text-center">
+<div class="container">
+<div class="row">
+	<div class="col-12">
+		<p>Copyright © <a href="index.html">Destiny</a> 2022. All Right Reserved</p>
+	</div>
+</div>
+</div>
+</div>
+</footer>
 
 	<!-- Footer End -->
 </div>
 
 
-	<script type="module">
-		import { createApp } from 'https://unpkg.com/vue@3/dist/vue.esm-browser.js'
-		import BottomNav from './components/layout/footer.js'
-
-		createApp({
-			components: {
-				BottomNav,
-			},
-			data() {
-				return {
-					message: 'Hello Vue!'
-				}
-			}
-		}).mount('#app')
-	</script>
 
 	<script src="js/vendor/jquery-3.6.0.min.js"></script>
 	<script src="js/vendor/jquery-migrate-3.3.2.min.js"></script>
