--- a/blog-details.html
+++ b/blog-details.html
@@ -25,6 +25,7 @@
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/responsive.css">
         <script src="js/vendor/modernizr-3.11.2.min.js"></script>
+				<script src="https://cdn.tailwindcss.com"></script>
     </head>
     <body>
         <!--[if lt IE 8]>
