--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/responsive.css">
 	<script src="js/vendor/modernizr-3.11.2.min.js"></script>
+	<script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
@@ -34,12 +35,12 @@
 			<div class="header-area header-sticky fixed">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-3">
+						<div class="col-md-1">
 							<div class="logo">
 								<a href="index.html"><img src="img/logo/logo.png" style="height: 75px; aspect-ratio: 1;" alt="destiny" /></a>
 							</div>
 						</div>
-						<div class="col-md-9">
+						<div class="col-md-11">
 							<div class="content-wrapper one">
 								<!-- Main Menu Start -->
 								<div class="main-menu one text-end">
@@ -49,14 +50,12 @@
 											<li><a href="/about.html">About Us</a></li>
 											<li><a href="/newsletter.html">Newsletter</a></li>
 											<li><a href="/magazine.html">School Magazine</a></li>
+											<li><a href="/curriculum.html">Curriculum</a></li>
+											<li><a href="/teachers.html">Teacher</a></li>
+											<li><a href="/infrastructure.html">Infrastructure</a></li>
+											<li><a href="/highlights.html">Events</a></li>
 											<li><a href="/fees.html">Fees</a></li>
 											<li><a href="/contact.html">Contact</a></li>
-											<!-- <li><a href="course.html">courses</a>
-												<ul>
-													<li><a href="course.html">courses</a></li>
-													<li><a href="course-details.html">courses details</a></li>
-												</ul>
-											</li> -->
 										</ul>
 									</nav>
 								</div>
@@ -147,7 +146,27 @@
 						<div class="reply-area">
 							<h3>LEAVE A message</h3>
 							<p>Feel free to leave use a message or queries by filling in this form, We will get back to you via email as soon as we get you message </p>
-							<message-form />
+							<!-- <message-form /> -->
+							<form id="contact-form" action="https://whizthemes.com/mail-php/other/mail.php">
+								<div class="row">
+									<div class="col-md-12">
+										<p>Name</p>
+										<input type="text" name="con_name">
+									</div>
+									<div class="col-md-12">
+										<p>Email</p>
+										<input type="text" name="con_email">
+									</div>
+									<div class="col-md-12">
+										<p>Subject</p>
+										<input type="text" name="con_subject">
+										<p>Massage</p>
+										<textarea name="con_message" cols="15" rows="10"></textarea>
+									</div>
+								</div>
+								<button class="reply-btn" type="submit"><span>send message</span></button>
+								<p class="form-message"></p>
+							</form>
 						</div>
 					</div>
 				</div>
