--- a/login.html
+++ b/login.html
@@ -25,6 +25,7 @@
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/responsive.css">
         <script src="js/vendor/modernizr-3.11.2.min.js"></script>
+				<script src="https://cdn.tailwindcss.com"></script>
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -33,7 +34,7 @@
 
         <!-- Header Area Start -->
 		<header class="top">
-		    <div class="header-top">
+		    <!-- <div class="header-top">
 		        <div class="container">
 		            <div class="row">
 		                <div class="col-md-8 col-sm-8">
@@ -51,7 +52,7 @@
 		                </div>
 		            </div>
 		        </div>
-		    </div>
+		    </div> -->
 			<div class="header-area two header-sticky">
 				<div class="container">
 					<div class="row">
@@ -168,9 +169,9 @@
                                     <span>Please login using account detail bellow.</span>
                                 </div>
                                 <div class="login-form">
-                                    <form action="#" method="post">
-                                        <input type="text" name="user-name" placeholder="Username">
-                                        <input type="password" name="user-password" placeholder="Password">
+                                    <form action="http://localhost/destiny_website/auth/login.php" method="post">
+                                        <input type="text" name="username" placeholder="Username">
+                                        <input type="password" name="password" placeholder="Password">
                                         <div class="button-box">
                                             <div class="login-toggle-btn">
                                                 <input type="checkbox" id="remember">
@@ -198,7 +199,7 @@
                             <p>I must explain to you how all this mistaken idea </p>
                         </div>
                         <div class="newsletter-form mc_embed_signup">
-                            <form action="https://devitems.us11.list-manage.com/subscribe/post?u=6bbb9b6f5827bd842d9640c82&amp;id=05d85f18ef" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                            <form action="/" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                                 <div id="mc_embed_signup_scroll" class="mc-form">
                                     <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Enter your e-mail address" required>
                                     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
@@ -206,13 +207,6 @@
                                     <button id="mc-embedded-subscribe" class="default-btn" type="submit" name="subscribe"><span>subscribe</span></button>
                                 </div>
                             </form>
-                            <!-- mailchimp-alerts Start -->
-                            <div class="mailchimp-alerts">
-                                <div class="mailchimp-submitting"></div><!-- mailchimp-submitting end -->
-                                <div class="mailchimp-success"></div><!-- mailchimp-success end -->
-                                <div class="mailchimp-error"></div><!-- mailchimp-error end -->
-                            </div>
-                            <!-- mailchimp-alerts end -->
                         </div>
                     </div>
                 </div>
@@ -227,7 +221,7 @@
                         <div class="col-md-4 col-sm-6">
                             <div class="single-widget pr-60">
                                 <div class="footer-logo pb-25">
-                                    <a href="index.html"><img src="img/logo/footer-logo.png" alt="destiny"></a>
+                                    <a href="/index.html"><img src="/img/logo/logo.png" alt="destiny"></a>
                                 </div>
                                 <p>I must explain to you how all this mistaken idea of denoung pleure and praising pain was born and give you a coete account of the system. </p>
                                 <div class="footer-social">
@@ -279,7 +273,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-12">
-                            <p>Copyright © <a href="index.html">Destiny</a> 2021. All Right Reserved By <a href="https://themeforest.net/user/hastech/portfolio" target="_blank">Hastech.</a></p>
+                            <p>Copyright © <a href="index.html">Destiny</a> 2022. All Right Reserved</p>
                         </div>
                     </div>
                 </div>
