--- a/magazine.html
+++ b/magazine.html
@@ -25,6 +25,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/responsive.css">
 	<script src="js/vendor/modernizr-3.11.2.min.js"></script>
+	<script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
@@ -38,12 +39,12 @@
 			<div class="header-area two header-sticky">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-3 col-sm-5 col-6">
+						<div class="col-md-1 col-sm-5 col-6">
 							<div class="logo">
 								<a href="index.html"><img src="img/logo/logo.png" style="height: 50px; aspect-ratio: 1;" alt="destiny" /></a>
 							</div>
 						</div>
-						<div class="col-md-9 col-sm-7 col-6">
+						<div class="col-md-11 col-sm-7 col-6">
 							<div class="content-wrapper text-end">
 								<!-- Main Menu Start -->
 								<div class="main-menu">
@@ -53,6 +54,10 @@
 											<li><a href="/about.html">About Us</a></li>
 											<li><a href="/newsletter.html">Newsletter</a></li>
 											<li><a href="/magazine.html">School Magazine</a></li>
+											<li><a href="/curriculum.html">Curriculum</a></li>
+											<li><a href="/teachers.html">Teacher</a></li>
+											<li><a href="/infrastructure.html">Infrastructure</a></li>
+											<li><a href="/highlights.html">Events</a></li>
 											<li><a href="/fees.html">Fees</a></li>
 											<li><a href="/contact.html">Contact</a></li>
 											<!-- <li><a href="course.html">courses</a>
