--- a/newsletter.html
+++ b/newsletter.html
@@ -25,6 +25,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/responsive.css">
 	<script src="js/vendor/modernizr-3.11.2.min.js"></script>
+	<script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
@@ -35,34 +36,15 @@
 
 	<!-- Header Area Start -->
 	<header class="top">
-		<!-- <div class="header-top">
-		        <div class="container">
-		            <div class="row">
-		                <div class="col-md-8 col-sm-8">
-		                    <div class="header-top-left">
-		                        <p>HAVE ANY QUESTION ?  +880 5698  598  6587</p>
-		                    </div>
-		                </div>
-		                <div class="col-md-4 col-sm-4">
-		                    <div class="header-top-right text-md-end text-center">
-		                        <ul>
-		                            <li><a href="login.html">login</a></li>
-		                            <li><a href="signup.html">signup</a></li>
-		                        </ul>
-		                    </div>
-		                </div>
-		            </div>
-		        </div>
-		    </div> -->
 		<div class="header-area two header-sticky">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-3 col-sm-5 col-6">
+					<div class="col-md-1 col-6">
 						<div class="logo">
-							<a href="index.html"><img src="img/logo/logo.png" style="height: 50px; aspect-ratio: 1;" alt="destiny" /></a>
+							<a style="height: 50px; aspect-ratio: 1;" href="/index.html"><img src="/img/logo/logo.png" alt="destiny" /></a>
 						</div>
 					</div>
-					<div class="col-md-9 col-sm-7 col-6">
+					<div class="col-md-11 col-6">
 						<div class="content-wrapper text-end">
 							<!-- Main Menu Start -->
 							<div class="main-menu">
@@ -72,34 +54,38 @@
 										<li><a href="/about.html">About Us</a></li>
 										<li><a href="/newsletter.html">Newsletter</a></li>
 										<li><a href="/magazine.html">School Magazine</a></li>
+										<li><a href="/curriculum.html">Curriculum</a></li>
+										<li><a href="/teachers.html">Teacher</a></li>
+										<li><a href="/infrastructure.html">Infrastructure</a></li>
+										<li><a href="/highlights.html">Events</a></li>
 										<li><a href="/fees.html">Fees</a></li>
 										<li><a href="/contact.html">Contact</a></li>
 										<!-- <li><a href="course.html">courses</a>
-																													<ul>
-																														<li><a href="course.html">courses</a></li>
-																														<li><a href="course-details.html">courses details</a></li>
-																													</ul>
-																												</li> -->
+																			<ul>
+																				<li><a href="course.html">courses</a></li>
+																				<li><a href="course-details.html">courses details</a></li>
+																			</ul>
+																		</li> -->
 									</ul>
 								</nav>
 							</div>
 							<!--Search Form Start-->
 							<div class="search-btn">
 								<!-- <ul class="header-search search-toggle">
-                                        <li class="search-menu">
-                                            <i class="fa fa-search"></i>
-                                        </li>
-                                    </ul>
-                                    <div class="search">
-                                        <div class="search-form">
-                                            <form id="search-form" action="#">
-                                                <input type="search" placeholder="Search here..." name="search" />
-                                                <button type="submit">
-                                                    <span><i class="fa fa-search"></i></span>
-                                                </button>
-                                            </form>
-                                        </div>
-                                    </div> -->
+									<li class="search-menu">
+										<i class="fa fa-search"></i>
+									</li>
+								</ul>
+								<div class="search">
+									<div class="search-form">
+										<form id="search-form" action="#">
+											<input type="search" placeholder="Search here..." name="search" />
+											<button type="submit">
+												<span><i class="fa fa-search"></i></span>
+											</button>
+										</form>
+									</div>
+								</div> -->
 							</div>
 							<!--End of Search Form-->
 							<!-- Main Menu End -->
